--- a/lib/pffc/test/README
+++ b/lib/pffc/test/README
@@ -33,6 +33,9 @@ Overview
   TESTMPI and MTESTMPI tests the MPI implementation for writing vertex
   data in parallel.
 
+  TDOUBLEC tests that the encoding/decoding of double precision values
+  to/from 5 16-bit ints is working correctly
+
 Using TREADC, TWRITEC, TFLOATC, and TA
 
   Run make with the command line "make". Some changes to the
@@ -132,3 +135,34 @@ Using TESTMPI and MTESTMPI
      Proc 1: my_box = 1 -- length: 3 -- Precision: Full
      Proc 2: No Box -- length: 0
      pars.pff samples/fp10.pff differ: byte 165, line 1
+
+
+  Run TDOUBLE to test encoding/decoding of double-precision reals to/from
+  16-bit unsigned ints. This routine loops over some powers of pi, and:
+     * executes pfud2i and prints out the 5 16-bit unsigned ints
+     * executes pfui2d to convert back to a new double
+     * prints out the original and new doubles, and the relative
+       error of the new value
+  The exact value of the relative error is platform-specific.
+  However, if working correctly, the magnitude should be < 1e-14
+  This is the output using the Intel compiler, version 11.1,
+  on a Linux system:
+
+0  18703  27985   2138   6144  16388
+0    3.141592653590e+00
+     3.141592653590e+00      0.000e+00
+0   8953  16823   5009    768  16383
+0   -3.183098861838e-01
+    -3.183098861838e-01      0.000e+00
+1  26850   6509  30039  11264  16414
+1    2.980909933345e+04
+     2.980909933345e+04      1.110e-15
+1   3252  19859   8890  29696  16357
+1   -3.354680357209e-05
+    -3.354680357209e-05     -1.110e-15
+2  11593  12007   7482  30976  16798
+2    1.392304051057e+62
+     1.392304051057e+62      6.217e-15
+2  15640  28528  12932  13568  15973
+2   -7.182339225692e-63
+    -7.182339225692e-63     -6.217e-15
