--- a/lib/pffc/test/README
+++ b/lib/pffc/test/README
@@ -1,5 +1,5 @@
 ------------------------------------------------------------------------------
-      $Id$
+      $Id: README,v 1.2 2013/10/22 22:23:50 tdpoint Exp $
       
       Copyright (2008) Sandia Corporation. Under the terms of
       Contract DE-AC04-94AL85000 with Sandia Corporation, the U.S.
@@ -121,6 +121,8 @@ Using TESTMPI and MTESTMPI
     $ testmpi.sh  -machinefile ~/.mpi.machines
      testmpi -r: PASSED
      testmpi -f: PASSED
+     testmpi -r -a: PASSED
+     testmpi -f -a: PASSED
      mpirun -np 1 mtestmpi -r 1 0: PASSED
      mpirun -np 2 mtestmpi -r 2 0: PASSED
      mpirun -np 2 mtestmpi -r 2 1: PASSED
